# VisitorPattern

./: CMakeLists.txt  README.md  main.cpp
Shapes/: Circle.h  Rectangle.h  Shape.h  Triangle.h
ShapesVisitors/: AreaVisitor.h  ShapesVisitor.h
